--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SYST17796_ProjectStarterCode.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\user\\Downloads\\hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=C:\\Users\\user\\Downloads\\junit-4.12.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=syst17796_projectstartercode.SYST17796_ProjectStarterCode
+main.class=ca.sheridancollege.project.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
